# cert-inspector

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  release.yml
src/: commands.rs  main.rs
testdata/: ca-0.crt  ca-1.crt  ca-2.crt  ca-3.crt  ca-4.crt  ca-bundle.crt
