[package]
name = "cert-inspector"
version = "0.0.0-0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features=["derive"] }
pem = { version = "3.0.4", default-features = false }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.1"
x509-parser = { version = "0.16.0", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
